添加跳转页面

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "pages": [
         "pages/home/home",
+        "pages/home/banner/banner1/banner1",
         "pages/shop/shop",
         "pages/fanli/fanli",
         "pages/mine/mine"
